asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__pull__pull_from_elsewhere.snap
---
source: src/gitui/tests/pull.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git pull origin                                                               |
Already up to date.                                                             |
styles_hash: baa329f6340fcc8b
