asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__pull__pull_from_elsewhere_prompt.snap
---
source: src/gitui/tests/pull.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Select remote: ›                                                              |
styles_hash: a2a72e20bfcc2997
