asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__pull__pull_setup_push_remote.snap
---
source: asyncgit/src/lib/gitui/tests/pull.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Pull                    Arguments                                               |
p from origin           -r Rebase local commits (--rebase)                      |
u from origin/main                                                              |
e from elsewhere                                                                |
q Quit/Close                                                                    |
styles_hash: e48a4cc4a7bf2f61
