asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__pull__pull_setup_upstream.snap
---
source: asyncgit/src/lib/gitui/tests/pull.rs
expression: ctx.redact_buffer()
---
▌On branch new-branch                                                           |
▌Your branch is up to date with 'refs/heads/main'.                              |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main new-branch origin/main add initial-file                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Pull                            Arguments                                       |
p pushRemote, setting that      -r Rebase local commits (--rebase)              |
u from main                                                                     |
e from elsewhere                                                                |
q Quit/Close                                                                    |
styles_hash: de0841f10720470a
