asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__pull__pull_setup_upstream_same_as_head.snap
---
source: asyncgit/src/lib/gitui/tests/pull.rs
expression: ctx.redact_buffer()
---
▌On branch new-branch                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main new-branch origin/main add initial-file                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Pull                            Arguments                                       |
p pushRemote, setting that      -r Rebase local commits (--rebase)              |
u upstream, setting that                                                        |
e from elsewhere                                                                |
q Quit/Close                                                                    |
────────────────────────────────────────────────────────────────────────────────|
$ git branch --set-upstream-to new-branch                                       |
warning: not setting branch 'new-branch' as its own upstream                    |
styles_hash: 2e2ef49b62c9c347
