asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__pull__pull_upstream.snap
---
source: src/gitui/tests/pull.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 d07f2d3 main origin/main add remote-file                                       |
 b66a0bf add initial-file                                                       |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git pull origin refs/heads/main                                               |
From                                                                            |
 * branch            main       -> FETCH_HEAD                                   |
   b66a0bf..d07f2d3  main       -> origin/main                                  |
Updating b66a0bf..d07f2d3                                                       |
Fast-forward                                                                    |
 remote-file | 1 +                                                              |
 1 file changed, 1 insertion(+)                                                 |
 create mode 100644 remote-file                                                 |
styles_hash: 5cab1b81bd346c16
